<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.category.CreateCategoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_category"
        style="@style/CustomToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:elevation="0dp"
        app:title="@string/title_new_category"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:fontFamily="@font/roboto_400"
        android:text="@string/title_name"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_name_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="12dp"
        android:text="@string/new_category"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_name"
        app:layout_constraintEnd_toStartOf="@id/btn_name_category"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_name_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="22dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/roboto_400"
        android:text="@string/title_type"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_name_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="22dp"
        android:text="@string/title_income"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_type"
        app:layout_constraintEnd_toStartOf="@id/btn_name_category"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/roboto_400"
        android:text="@string/title_icon"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_name_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_type" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_icon"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/text_icon"
        tools:ignore="MissingConstraints"
        tools:listitem="@layout/item_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_selector"
        android:enabled="true"
        android:text="@string/title_create_category"
        android:textAllCaps="false"
        android:textColor="@drawable/text_selector"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
