<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.google.GoogleAuthorizationActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/hello_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="3"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/hello_image" />

    <TextView
        android:id="@+id/hello_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_500"
        android:text="@string/hello_string1"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/hello_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="2"
        android:fontFamily="@font/roboto_400"
        android:text="@string/hello_string2"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="0"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_add_type"
        android:textAllCaps="false"
        android:textColor="@drawable/text_selector"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>