<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.operation.AddCategoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_category"
        style="@style/CustomToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:elevation="0dp"
        app:title="@string/title_add_category"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:listitem="@layout/item_category" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_create_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_400"
        android:padding="10dp"
        android:text="@string/title_create_category"
        android:textColor="@color/color_accent"
        android:textSize="19sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_category"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:enabled="true"
        android:text="@string/btn_add_type"
        android:textAllCaps="false"
        android:textColor="@drawable/text_selector"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>